--- a/fastlane/metadata/es-ES/release_notes.txt
+++ b/fastlane/metadata/es-ES/release_notes.txt
@@ -1,3 +1,4 @@
-- ¿Gestionas más de una tienda? Puedes cambiar de sitio sin tener que salir y volver a acceder: accede a Configuración y toca Cambiar tienda. El nombre de la tienda activa se muestra en la pestaña “Mi tienda”.
-- Cuando se produce un error al añadir una nota o realizar un pedido, ahora en el cuadro de mensaje se muestra la opción “Reintentar” para que puedas intentarlo de nuevo.
-- Los pagos que recibes no son solo números redondos, así que ahora los pedidos pueden tener cantidades en decimales.
+- Visita la pantalla Información del pedido para cambiar manualmente el estado de un pedido o ver el seguimiento del envío.
+- Ahora admitimos y mostramos debidamente las etiquetas de estado de los pedidos personalizados.
+- Ahora puedes filtrar por estado del pedido personalizado.
+- Se ha mejorado la compatibilidad con los idiomas de derecha a izquierda gracias a un mejor tratamiento del volteo de componentes gráficos.
