--- a/fastlane/metadata/ja/release_notes.txt
+++ b/fastlane/metadata/ja/release_notes.txt
@@ -1,3 +1,4 @@
-- 複数のストアを管理しますか ?サイト切り替えにログインやログアウトは不要です。「設定」に移動して「ストアを切り替え」をタップします。有効なストアの名前が「自分のストア」タブに表示されます。
-- メモの追加や注文の処理が失敗すると、メッセージボックスに「再試行」オプションが表示され、再実行できます。
-- 支払いの概数を受けるだけでなく、今後は注文が10進数で表示されます。
+- 注文詳細画面から注文のステータスを手動で変更したり、荷物の追跡を表示したりできるようになりました。
+- カスタム注文ステータスラベルを完全にサポートし、正しく表示できるようになりました。
+- カスタム注文ステータスでフィルターできるようになりました。
+- 右から左へ記述する言語のサポートが強化され、グラフィックコンポーネントの反転への対応が容易になりました。
