--- a/fastlane/metadata/ru/release_notes.txt
+++ b/fastlane/metadata/ru/release_notes.txt
@@ -1,3 +1,4 @@
-— Управляете несколькими магазинами? Теперь можно переключаться между сайтами без ввода учетных данных. Перейдите в "Настройки" и нажмите "Переключиться между магазинами". Название текущего магазина отображается на вкладке "Мой магазин".
-— В окно, которое отображается при сбое во время добавления примечания или выполнения заказа, добавлена кнопка "Повторить попытку", чтобы можно было выполнить действие еще раз.
-— В цены добавлены знаки после запятой для использования дробных чисел.
+— Откройте информацию о заказе, чтобы вручную поменять статус заказа или проверить отслеживание посылки.
+— Полная поддержка и правильное отображение меток настраиваемых статусов заказа.
+— Вы можете настроить фильтрацию по настраиваемым статусам заказов.
+— Улучшена поддержка языков с написанием справа налево, усовершенствовано переворачивание графических элементов.
