--- a/fastlane/metadata/zh-Hans/release_notes.txt
+++ b/fastlane/metadata/zh-Hans/release_notes.txt
@@ -1,3 +1,4 @@
-- 管理多家商店？您可以在不登录和退出的情况下切换站点：前往“设置”，轻点“切换商店”。活动商店的名称显示在“我的商店”选项卡上。
-- 现在，当添加注释或履行订单失败时，消息框会显示“重试”选项，以便您可以再次尝试。
-- 您并非只接受整数支付，因此现在订单金额可以包含小数。
+- 访问“订单详细信息”屏幕，手动更改订单状态或查看配送跟踪。
+- 我们现在完全支持并正确显示自定义订单状态标签。
+- 您现在可以根据自定义订单状态进行筛选。
+- RTL 语言支持已得到改进，可以更好地处理图形组件翻转情况。
