--- a/fastlane/metadata/zh-Hant/release_notes.txt
+++ b/fastlane/metadata/zh-Hant/release_notes.txt
@@ -1,3 +1,4 @@
-- 管理多家商店嗎？切換網站不必登出再登入：前往「設定」，然後點選「切換商店」。「我的商店」分頁會顯示使用中的商店名稱。
-- 現在，無法新增備註或履行訂單時，訊息方塊會顯示「重試」選項，方便你再試一次。
-- 訂單金額不再僅限於整數，現在金額可接受小數位數。
+- 請造訪訂單詳細資訊畫面，以手動變更訂單狀態或檢視運送追蹤。
+- 我們現已完整支援並將正確顯示自訂訂單狀態標籤。
+- 您現可依訂單狀態進行篩選。
+- 我們已改善 RTL 語言支援，並更有效處理圖形化元件翻轉。
