--- a/fastlane/metadata/en-US/release_notes.txt
+++ b/fastlane/metadata/en-US/release_notes.txt
@@ -1,3 +1,4 @@
-- Manage more than one store? You can switch sites without logging in and out: head to Settings and tap on Switch Store. The name of the active store displays on the “My Store” tab.
-- When adding a note or fulfilling an order fails, the message box now shows a “Retry” option so you can give it another go.
-- You don’t only take payments in round numbers, so orders can now have decimal quantities.
+- Visit the Order Details screen to manually change an order’s status or view shipment tracking.
+- We now fully support and properly display custom order status labels.
+- You can now filter by custom order status.
+- RTL language support has been improved, with better handling of graphical component flipping.
