--- a/fastlane/metadata/ko/release_notes.txt
+++ b/fastlane/metadata/ko/release_notes.txt
@@ -1,3 +1,4 @@
-- 스토어를 하나 이상 관리합니까? 로그인 및 로그아웃하지 않고 사이트를 전환할 수 있습니다. 설정으로 가서 스토어 전환을 탭하세요. 활성 스토어의 이름이 "내 스토어" 탭에 표시됩니다.
-- 메모를 추가하거나 주문을 이행하지 못하면 메시지 상자에 "다시 시도"옵션이 표시되므로 다시 시도할 수 있습니다.
-- 어림수로 결제하는 것뿐만 아니라 이제 주문 수량에 소수점을 사용할 수 있습니다.
+- 주문 정보 화면을 방문하여 주문 상태를 수동으로 변경하거나 배송 추적을 확인합니다.
+- 이제 사용자 정의 주문 상태 레이블을 완전히 지원하고 올바르게 표시합니다.
+- 사용자 정의 주문 상태별로 필터링할 수 있습니다.
+- RTL 언어 지원이 개선되어 그래픽 구성 요소 뒤집기를 더 잘 처리합니다.
